--- a/daemon/Makefile
+++ b/daemon/Makefile
@@ -2,7 +2,7 @@ CXX = g++
 RM = rm -f
 CXXFLAGS = -O0 -Wall -g -I/usr/include/postgresql -I/usr/include/ffmpeg `taglib-config --cflags`
 LDFLAGS = -lccgnu2 -lccext2 -lpq -lavcodec `taglib-config --libs`
-OBJECTS = Album.o Artist.o Database.o FileReader.o Levenshtein.o Locutus.o Metafile.o Metatrack.o PUIDGenerator.o Settings.o Track.o Matcher.o WebService.o XMLNode.o
+OBJECTS = Album.o Artist.o Database.o FileHandler.o Levenshtein.o Locutus.o Metafile.o Metatrack.o PUIDGenerator.o Settings.o Track.o Matcher.o WebService.o XMLNode.o
 
 locutus: $(OBJECTS)
 	$(CXX) $(OBJECTS) $(LDFLAGS) -o locutus
@@ -10,7 +10,7 @@ locutus: $(OBJECTS)
 Album.o: Album.h Album.cpp
 Artist.o: Artist.h Artist.cpp
 Database.o: Database.h Database.cpp
-FileReader.o: FileReader.h FileReader.cpp
+FileHandler.o: FileHandler.h FileHandler.cpp
 Levenshtein.o: Levenshtein.h Levenshtein.cpp
 Locutus.o: Locutus.h Locutus.cpp
 Metafile.o: Metafile.h Metafile.cpp
