woah, huge refactoring. created a database layer as mixing it up with the rest of the code was pretty nasty

--- a/daemon/Makefile
+++ b/daemon/Makefile
@@ -2,7 +2,7 @@ CXX = g++
 RM = rm -f
 CXXFLAGS = -O0 -Wall -g -I/usr/include/postgresql -I/usr/include/ffmpeg `taglib-config --cflags`
 LDFLAGS = -lccgnu2 -lccext2 -lpq -lavcodec `taglib-config --libs`
-OBJECTS = Album.o Artist.o Database.o FileHandler.o Levenshtein.o Locutus.o Metafile.o Metatrack.o PUIDGenerator.o Settings.o Track.o Matcher.o WebService.o XMLNode.o
+OBJECTS = Album.o Artist.o Database.o FileHandler.o Levenshtein.o Locutus.o Metafile.o Metatrack.o PostgreSQL.o PUIDGenerator.o Track.o Matcher.o WebService.o XMLNode.o
 
 locutus: $(OBJECTS)
 	$(CXX) $(OBJECTS) $(LDFLAGS) -o locutus
@@ -15,8 +15,8 @@ Levenshtein.o: Levenshtein.h Levenshtein.cpp
 Locutus.o: Locutus.h Locutus.cpp
 Metafile.o: Metafile.h Metafile.cpp
 Metatrack.o: Metatrack.h Metatrack.cpp
+PostgreSQL.o: PostgreSQL.h PostgreSQL.cpp
 PUIDGenerator.o: PUIDGenerator.h PUIDGenerator.cpp
-Settings.o: Settings.h Settings.cpp
 Track.o: Track.h Track.cpp
 Matcher.o: Matcher.h Matcher.cpp
 WebService.o: WebService.h WebService.cpp
