--- a/daemon/Makefile
+++ b/daemon/Makefile
@@ -2,7 +2,7 @@ CXX = g++
 RM = rm -f
 CXXFLAGS = -O0 -Wall -g -I/usr/include/postgresql -I/usr/include/ffmpeg `taglib-config --cflags`
 LDFLAGS = -lccgnu2 -lccext2 -lpq -lavcodec `taglib-config --libs`
-OBJECTS = Album.o Artist.o Database.o Debug.o FileHandler.o Levenshtein.o Locutus.o Metafile.o Metatrack.o PostgreSQL.o PUIDGenerator.o Track.o Matcher.o WebService.o XMLNode.o
+OBJECTS = Album.o Artist.o Database.o Debug.o FileNamer.o Levenshtein.o Locutus.o Metafile.o Metatrack.o PostgreSQL.o PUIDGenerator.o Track.o Matcher.o WebService.o XMLNode.o
 
 locutus: $(OBJECTS)
 	$(CXX) $(OBJECTS) $(LDFLAGS) -o locutus
@@ -11,7 +11,7 @@ Album.o: Album.h Album.cpp
 Artist.o: Artist.h Artist.cpp
 Database.o: Database.h Database.cpp
 Debug.o: Debug.h Debug.cpp
-FileHandler.o: FileHandler.h FileHandler.cpp
+FileNamer.o: FileNamer.h FileNamer.cpp
 Levenshtein.o: Levenshtein.h Levenshtein.cpp
 Locutus.o: Locutus.h Locutus.cpp
 Metafile.o: Metafile.h Metafile.cpp
