--- a/daemon/Makefile
+++ b/daemon/Makefile
@@ -2,7 +2,7 @@ CXX = g++
 RM = rm -f
 CXXFLAGS = -O0 -Wall -g -I/usr/include/postgresql -I/usr/include/ffmpeg `taglib-config --cflags`
 LDFLAGS = -lccgnu2 -lccext2 -lpq -lavcodec `taglib-config --libs`
-OBJECTS = Album.o Artist.o Database.o Debug.o FileNamer.o Levenshtein.o Locutus.o Match.o Matcher.o Metafile.o Metatrack.o PostgreSQL.o Track.o WebService.o
+OBJECTS = Album.o Artist.o Database.o Debug.o FileNamer.o Levenshtein.o Locutus.o Match.o Matcher.o Metafile.o Metatrack.o MusicBrainz.o PostgreSQL.o Track.o WebService.o
 
 locutus: $(OBJECTS)
 	$(CXX) $(OBJECTS) $(LDFLAGS) -o locutus
@@ -18,6 +18,7 @@ Match.o: Match.h Match.cpp
 Matcher.o: Matcher.h Matcher.cpp
 Metafile.o: Metafile.h Metafile.cpp
 Metatrack.o: Metatrack.h Metatrack.cpp
+MusicBrainz.o: MusicBrainz.h MusicBrainz.cpp
 PostgreSQL.o: PostgreSQL.h PostgreSQL.cpp
 #PUIDGenerator.o: PUIDGenerator.h PUIDGenerator.cpp
 Track.o: Track.h Track.cpp
