still metadata, added start of settings pane

--- a/gui/nbproject/project.properties
+++ b/gui/nbproject/project.properties
@@ -23,7 +23,8 @@ file.reference.postgresql-8.4-701.jdbc4.jar=resources/jdbc/postgresql-8.4-701.jd
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-8.4-701.jdbc4.jar}
+    ${file.reference.postgresql-8.4-701.jdbc4.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
