thread for polling status, plus cosmetic changes

--- a/gui/nbproject/project.properties
+++ b/gui/nbproject/project.properties
@@ -22,9 +22,7 @@ excludes=
 file.reference.postgresql-8.4-701.jdbc4.jar=resources/jdbc/postgresql-8.4-701.jdbc4.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.postgresql-8.4-701.jdbc4.jar}:\
-    ${libs.absolutelayout.classpath}
+javac.classpath=${file.reference.postgresql-8.4-701.jdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
