--- a/daemon/conf/locutus.conf
+++ b/daemon/conf/locutus.conf
@@ -1,7 +1,15 @@
 # Configuration file for Locutus.
 # Mostly just contain connection information for the database.
-# Values may not contain " " or a tab character.
-database_host = localhost
-database_user = locutus
-database_pass = locutus
-database_name = locutus
+# Values may not contain space or tab characters.
+
+# Database driver, alternatives: postgresql, sqlite
+database_driver = postgresql
+
+# PostgreSQL settings
+postgresql_host = localhost
+postgresql_username = locutus
+postgresql_password = locutus
+postgresql_database = locutus
+
+# SQLite settings
+sqlite_file = locutus.db
